@@ -42,6 +42,13 @@ server:
 	# number of outgoing simultaneous tcp buffers to hold per thread.
 	# outgoing-num-tcp: 10
 
+	# number of incoming simultaneous tcp buffers to hold per thread.
+	# incoming-num-tcp: 10
+	
+	# buffer size for handling DNS data. No messages larger than this
+	# size can be sent or received, by UDP or TCP. In bytes.
+	# msg-buffer-size: 65552
+
 	# the amount of memory to use for the message cache.
 	# in bytes. default is 4 Mb
 	# msg-cache-size: 4194304
